fix overflow-x to scroll

--- a/src/sass/views/_index.scss
+++ b/src/sass/views/_index.scss
@@ -15,7 +15,7 @@ main {
 
   @media #{$small-and-up} {
     min-height: $main-bg-height;
-    overflow-x: auto;
+    overflow-x: scroll;
   }
 
   section#content {
